Added yearly fee

--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -28,10 +28,11 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/MO</span>
+              ${{ plan.price.yearly }}<span>/User/Mo</span>
+              <span>Billed yearly as ${{ plan.price.full-year }}/User</span>
             </div>
             <div class="plan__price monthly hide">
-              ${{ plan.price.monthly }}<span>/MO</span>
+              ${{ plan.price.monthly }}<span>/User/Mo</span>
             </div>
 
             <div class="plan__features">
@@ -66,10 +67,11 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/MO</span>
+              ${{ plan.price.yearly }}<span>/User/Mo</span>
+              <span>Billed yearly as ${{ plan.price.full-year }}/User</span>
             </div>
             <div class="plan__price monthly hide">
-              ${{ plan.price.monthly }}<span>/MO</span>
+              ${{ plan.price.monthly }}<span>/User/Mo</span>
             </div>
             <div class="plan__features">
               <ul>
