--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -28,7 +28,7 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/User/Mo</span>
+              ${{ plan.price.yearly }}<span>/User/Mo</span><br/>
               <span>Billed yearly as ${{ plan.price.full-year }}/User</span>
             </div>
             <div class="plan__price monthly hide">
@@ -67,7 +67,7 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/User/Mo</span>
+              ${{ plan.price.yearly }}<span>/User/Mo</span><br/>
               <span>Billed yearly as ${{ plan.price.full-year }}/User</span>
             </div>
             <div class="plan__price monthly hide">
