--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -9,6 +9,17 @@
       All plans include access to the <a href="products/diode-network">Diode Network Explorer</a> and use of the <a href="products/diode-cli">Diode CLI</a>
     </div>
 
+    <!-- Switch (Mothly/Yearly) -->
+    <div class="plan-switch-container">
+      <input id="planSwitch" type="checkbox" class="checkbox-switch" />
+    </div>
+    <div class="plan-switch-label-container">
+      <label class="plan-switch-label" for="planSwitch">
+        <span class="plan-switch-label__yearly active">Yearly</span>
+        <span class="plan-switch-label__monthly">Monthly</span>
+      </label>
+    </div>
+    
     <!-- Products Pricing Cards (Desktop) -->
     <div class="plans row hidden-xs">
       {% for plan in page.plans %}
@@ -21,16 +32,17 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/User/Mo</span><br/>
+              ${{ plan.price.yearly }}<span>/User/Mo</span>
               <div class="plan__price_annotation">
-                Billed yearly as ${{ plan.price.full-year }}/Users
+                Minimum {{ plan.price.min-users }} Users</br>
+                Billed yearly as ${{ plan.price.full-year }}/User                
               </div>
             </div>
             <div class="plan__price monthly hide">
               ${{ plan.price.monthly }}<span>/User/Mo</span>
-            </div>
-            <div class="plan__price_annotation">
-              Minimum {{ plan.price.min-users }} Users
+              <div class="plan__price_annotation">
+                Minimum {{ plan.price.min-users }} Users
+              </div>
             </div>
             <div class="plan__features">
               <ul>
@@ -64,16 +76,17 @@
               {{ plan.description }}
             </div>
             <div class="plan__price yearly">
-              ${{ plan.price.yearly }}<span>/User/Mo</span><br/>
+              ${{ plan.price.yearly }}<span>/User/Mo</span>
               <div class="plan__price_annotation">
-                Billed yearly as ${{ plan.price.full-year }}/User
+                Minimum {{ plan.price.min-users }} Users<br/>
+                Billed yearly as ${{ plan.price.full-year }}/User                
               </div>
             </div>
             <div class="plan__price monthly hide">
               ${{ plan.price.monthly }}<span>/User/Mo</span>
-            </div>
-            <div class="plan__price_annotation">
-              Minimum {{ plan.price.min-users }} Users
+              <div class="plan__price_annotation">
+                Minimum {{ plan.price.min-users }} Users
+              </div>
             </div>
             <div class="plan__features">
               <ul>
@@ -94,17 +107,7 @@
       {% endfor %}
     </div>
    
-    <!-- Switch (Mothly/Yearly) -->
-    <div class="plan-switch-container">
-      <input id="planSwitch" type="checkbox" class="checkbox-switch" />
-    </div>
-    <div class="plan-switch-label-container">
-      <label class="plan-switch-label" for="planSwitch">
-        <span class="plan-switch-label__yearly active">Yearly</span>
-        <span class="plan-switch-label__monthly">Monthly</span>
-      </label>
-    </div>
-    
+   
     <!-- Products Pricing Table (Desktop) -->
 <!-- Reintroduce feature table when pricing becomes more complex
     <div class="pricing-table hidden-xs">
