--- a/css/style.css
+++ b/css/style.css
@@ -5949,6 +5949,23 @@ section.products-pricing-section .plans-description {
   }
 }
 
+
+section.products-pricing-section .plans-annotation {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 16px;
+  color: #2d3e50;
+  line-height: 1.5;
+}
+
+@media (max-width: 993px) {
+  section.products-pricing-section .plans-annotation {
+    font-size: 14px;
+  }
+}
+
+
 section.products-pricing-section .products-section__description {
   margin: 0 auto 60px auto;
   font-size: 29px;
