--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -99,7 +99,12 @@
       {% endfor %}
     </div>
    
-   
+    
+    <div class="plans-annotation">
+      All pricing listed is per-drive.  Only one Nomad drive may be deployed at one time.  A given dDrive installation may subscribe to an unlimited number of shared drives.
+    </div>
+    
+    
     <!-- Products Pricing Table (Desktop) -->
 <!-- Reintroduce feature table when pricing becomes more complex
     <div class="pricing-table hidden-xs">
