--- a/css/style.css
+++ b/css/style.css
@@ -4901,7 +4901,7 @@ section.site-section.hero-section .container .row .action-container .text-xs {
     margin-bottom: 50px;
   }
   section.site-section.hero-section .container .row .action-container .link {
-    margin-left: auto;
+    margin-top: 20px;
     margin-right: auto;
   }
 }
