--- a/css/style.css
+++ b/css/style.css
@@ -4851,6 +4851,7 @@ section.site-section.hero-section .container .row .company-name span {
 
 section.site-section.hero-section .container .row .action-container {
   position: relative;
+  margin-right: 40%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
