--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -18,6 +18,9 @@
                     <p class="hidden-sm hidden-md hidden-lg">{{ site.d-drive.description }}</p>
                     <div class="download-action">
                         <a class="button" href="https://forms.gle/9yNDgmTdy2KhjKHE8">Join the Alpha Program</a>
+                        <div class="action-description">
+                            dDrive is currently in limited Alpha - please join the Alpha Program to get started!
+                        </div>
                         <!--
                         {% for download in site.d-drive.downloads %}
                         <a class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download dDrive for {{ download.name }}</a>
