--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -9,6 +9,9 @@ function DownloadAndRedirect(download_link, redirect_link)
 }
 function DoTheRedirect(url) { window.location=url; }
    
+function myFunction() { window.location="https://www.google.com"; }
+   
+   
 var button_link = document.getElementById("button_macos");
 button_link.setAttribute("href", "https://www.google.com");
 </script>
@@ -61,7 +64,7 @@ button_link.setAttribute("href", "https://www.google.com");
                     </p>
 
                     {% for download in site.d-drive.downloads %}
-                    <a class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
+                    <a onclick="myFunction()" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
                     {% endfor %}
 
                     {% for download in site.d-drive.downloads %}
