--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -1,13 +1,4 @@
-<script type="text/javascript">
-function DownloadAndRedirect(download_link, redirect_link)
-{
-   var DownloadURL = download_link;
-   var RedirectURL = redirect_link;
-   var RedirectPauseSeconds = 2;
-   location.href = DownloadURL;
-   setTimeout("DoTheRedirect('"+RedirectURL+"')",parseInt(RedirectPauseSeconds*1000));
-}
-  
+<script type="text/javascript"> 
 function ThankYouRedirect(redirect_link)
 {
    var RedirectURL = redirect_link;
@@ -69,17 +60,13 @@ function DoTheRedirect(url) { window.location=url; }
                     {% for download in site.d-drive.downloads %}
                     <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
                     {% endfor %}
-
-                    {% for download in site.d-drive.downloads %}
-                    <a id="button_{{ download.id }}" class="button hide {{ download.id }}" href="javascript:DownloadAndRedirect('{{ site.d-drive.download-base }}{{ download.link }}', '{{ site.d-drive.thank-you-for-downloading }}')">JS Diode Drive for {{ download.name }}</a>
-                    {% endfor %}
                     
                     <div class="action-description">
                         All downloads with SHA-1 their checksums:
                         <ul class="downloads">
                             {% for download in site.d-drive.downloads %}
                             <li>
-                                <a href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                                <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
                                 <span class="sha">{{ download.sha }}</span>
                             </li>
                             {% endfor %}
