--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -32,6 +32,7 @@ function DoTheRedirect(url) { window.location=url; }
                     <div class="download-action">
                         <a class="button" id="download_button">Download Diode Drive</a>
                     </div>
+                    <noscript>Your browser does not support JavaScript!</noscript>
                 </div>
                 <div class="col-sm-6 col-md-8 hidden-xs">
                     <div class="download-content">
