--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -32,7 +32,18 @@ function DoTheRedirect(url) { window.location=url; }
                     <div class="download-action">
                         <a class="button" id="download_button">Download Diode Drive</a>
                     </div>
-                    <noscript>Your browser does not support JavaScript!</noscript>
+                    <noscript>Your browser does not support JavaScript!
+                        <p>
+                           By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
+                           and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
+                        </p>     
+                        {% for download in site.d-drive.downloads %}
+                           <li>
+                              <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                              <span class="sha">{{ download.sha }}</span>
+                           </li>
+                        {% endfor %}
+                   </noscript>
                 </div>
                 <div class="col-sm-6 col-md-8 hidden-xs">
                     <div class="download-content">
