--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -44,17 +44,19 @@ function DoTheRedirect(url) { window.location=url; }
             </div>
             <noscript>
                <div class="row">
-                  Your browser does not support JavaScript!
-                  <p>
-                     By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
-                     and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
-                  </p>     
-                  {% for download in site.d-drive.downloads %}
-                     <li>
-                        <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
-                        <span class="sha">{{ download.sha }}</span>
-                     </li>
-                  {% endfor %}
+                  <div class="download__left">
+                     Your browser does not support JavaScript!
+                     <p>
+                        By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
+                        and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
+                     </p>     
+                     {% for download in site.d-drive.downloads %}
+                        <li>
+                           <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                           <span class="sha">{{ download.sha }}</span>
+                        </li>
+                     {% endfor %}
+                  </div>
                </div>
            </noscript>
         </div>
