--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -43,9 +43,9 @@ function DoTheRedirect(url) { window.location=url; }
                 </div>
             </div>
             <noscript>
-               <div class="row">
-                  <div class="download__left">
-                     Your browser does not support JavaScript!
+               <div class="row download-command">
+                  <div class="col-xs-12">
+                     </br>
                      <p>
                         By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
                         and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
