--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -30,6 +30,14 @@ function DoTheRedirect(url) { window.location=url; }
                     </div>
                     <p class="hidden-sm hidden-md hidden-lg">{{ site.d-drive.description }}</p>
                     <div class="download-action">
+                       
+                       
+                       {% for download in site.d-drive.downloads %}
+                       <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
+                       {% endfor %}
+                       
+                       
+                       
                         <a class="button" id="download_button" href="https://www.google.com">Download Diode Drive</a>
                     </div>
                 </div>
@@ -45,17 +53,18 @@ function DoTheRedirect(url) { window.location=url; }
             <noscript>
                <div class="row download-command">
                   <div class="col-xs-12">
-                     </br>
                      <p>
                         By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
                         and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
-                     </p>     
-                     {% for download in site.d-drive.downloads %}
-                        <li>
-                           <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
-                           <span class="sha">{{ download.sha }}</span>
-                        </li>
-                     {% endfor %}
+                     </p>  
+                     <div class="action-description">
+                        {% for download in site.d-drive.downloads %}
+                           <li>
+                              <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                              <span class="sha">{{ download.sha }}</span>
+                           </li>
+                        {% endfor %}
+                     </div>
                   </div>
                </div>
            </noscript>
