--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -30,15 +30,9 @@ function DoTheRedirect(url) { window.location=url; }
                     </div>
                     <p class="hidden-sm hidden-md hidden-lg">{{ site.d-drive.description }}</p>
                     <div class="download-action">
-                       
-                       
-                       {% for download in site.d-drive.downloads %}
-                       <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
-                       {% endfor %}
-                       
-                       
-                       
-                        <a class="button" id="download_button" href="https://www.google.com">Download Diode Drive</a>
+                        {% for download in site.d-drive.downloads %}
+                           <a class="button hide {{ download.id }}" id="download_button">Download Diode Drive</a>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-8 hidden-xs">
@@ -53,18 +47,19 @@ function DoTheRedirect(url) { window.location=url; }
             <noscript>
                <div class="row download-command">
                   <div class="col-xs-12">
+                     <div class="action-description">
+                        All downloads with SHA-1 their checksums:
+                        {% for download in site.d-drive.downloads %}
+                           <li>
+                              <a href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                              <span class="sha" style="padding-left:10px;">{{ download.sha }}</span>
+                           </li>
+                        {% endfor %}
+                     </div>
                      <p>
                         By downloading Diode Drive you accept the <a href="/msa" target="_blank">Diode Master Services Agreement</a> 
                         and our <a href="/privacy-policy" target="_blank">privacy policy</a>.
                      </p>  
-                     <div class="action-description">
-                        {% for download in site.d-drive.downloads %}
-                           <li>
-                              <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
-                              <span class="sha">{{ download.sha }}</span>
-                           </li>
-                        {% endfor %}
-                     </div>
                   </div>
                </div>
            </noscript>
