--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -45,7 +45,7 @@ function DoTheRedirect(url) { window.location=url; }
                 </div>
             </div>
             <noscript>
-               <div class="row download-command">
+               <div class="row download-command col-xs-12">
                   Select your download:
                   <div class="action-description">
                      <ul class="downloads">
