--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -45,17 +45,19 @@ function DoTheRedirect(url) { window.location=url; }
                 </div>
             </div>
             <noscript>
-               <div class="row download-command col-xs-12">
-                  Select your download:
-                  <div class="action-description">
-                     <ul class="downloads">
-                        {% for download in site.d-drive.downloads %}
-                        <li>
-                           <a href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
-                           <span class="sha" style="padding-left:10px;">{{ download.sha }}</span>
-                        </li>
-                        {% endfor %}
-                     </ul>
+               <div class="row download-command">
+                  <div class="col-xs-12">
+                     Select your download:
+                     <div class="action-description">
+                        <ul class="downloads">
+                           {% for download in site.d-drive.downloads %}
+                           <li>
+                              <a href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
+                              <span class="sha" style="padding-left:10px;">{{ download.sha }}</span>
+                           </li>
+                           {% endfor %}
+                        </ul>
+                     </div>
                   </div>
                   </br>
                   <p>
