--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -46,7 +46,7 @@ function DoTheRedirect(url) { window.location=url; }
                 </div>
             </div>
             <noscript>
-               <div class="row">
+               <div class="row download-command">
                   <div class="col-xs-12">
                      <div class="action-description">
                         <ul class="downloads">
