--- a/css/style.css
+++ b/css/style.css
@@ -4767,6 +4767,15 @@ section.site-section.hero-section .container .row .hero-title {
   max-width: 500px;
 }
 
+section.site-section.hero-section .container .row .hero-title-lp {
+  font-size: 50px;
+  line-height: 1.2;
+  position: relative;
+  margin-bottom: 30px;
+  font-weight: 400;
+  max-width: 1000px;
+}
+
 section.site-section.hero-section .container .row .hero-title::after {
   content: '';
   position: absolute;
