--- a/_includes/sections/hero-lp.html
+++ b/_includes/sections/hero-lp.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="hero-text col-xs-12 col-md-8 col-lg-12">
         <!-- Section Title -->
-        <h2 class="hero-title-lp">{{ page.hero-title }}</h2>
+        <h2 class="hero-title-lp hero-title">{{ page.hero-title }}</h2>
         <h2 class="hero-title--xs">{{ page.hero-xs-title }}</h2>
       
         <div class="action-container">
