--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -10,9 +10,7 @@
       </div>
     </div>
     <!-- Solutions -->
-    <div
-      class="row"
-    >
+    <div class="row" style="background-image: url("../images/cloud.png");">
       {% for solution in page.solutions %}
         <div class="col-sm-12 col-md-4">
           <div class="solution">
