--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <!-- Solutions -->
-    <div class="row" style="background-image: url("../images/cloud.png");">
+    <div class="row" style="background-image: url("https://customerthink.com/wp-content/uploads/Workplace-Communication.jpg");">
       {% for solution in page.solutions %}
         <div class="col-sm-12 col-md-4">
           <div class="solution">
