--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -9,26 +9,31 @@
         <h3 class="solution-section__description">{{ page.page-description }}</h3>
       </div>
     </div>
-    <!-- Solutions -->
-    <div class="row" style="background-color:#ff0000;">
-      {% for solution in page.solutions %}
-        <div class="col-sm-12 col-md-4">
-          <div class="solution">
-            <h4 class="solution-title">
-              {{ solution.title }}
-            </h4>
-            <p class="solution-description">
-              {{ solution.description }}
-            </p>
+  </div>
+  
+  <div class="mutant">
+    <div class="container">
+      <!-- Solutions -->
+      <div class="row" style="background-color:#ff0000;">
+        {% for solution in page.solutions %}
+          <div class="col-sm-12 col-md-4">
+            <div class="solution">
+              <h4 class="solution-title">
+                {{ solution.title }}
+              </h4>
+              <p class="solution-description">
+                {{ solution.description }}
+              </p>
+            </div>
           </div>
+        {% endfor %}
+
+        <!-- Bottom Button (Mobile Design) -->
+        <div class="col-xs-12 hidden-md hidden-lg">
+          <a class="button" href="{{ site.links.learn_more }}">GET A DEMO</a>
         </div>
-      {% endfor %}
-
-      <!-- Bottom Button (Mobile Design) -->
-      <div class="col-xs-12 hidden-md hidden-lg">
-        <a class="button" href="{{ site.links.learn_more }}">GET A DEMO</a>
       </div>
-
     </div>
+    
   </div>
 </section>
