--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -11,10 +11,10 @@
     </div>
   </div>
   
-  <div class="mutant">
+  <div class="mutant" style="background-color:#ff0000; padding-top:25px; padding-bottom:25px;>
     <div class="container">
       <!-- Solutions -->
-      <div class="row" style="background-color:#ff0000;">
+      <div class="row">
         {% for solution in page.solutions %}
           <div class="col-sm-12 col-md-4">
             <div class="solution">
