--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   
-  <div class="mutant" style="background-color:#ff0000; padding-top:25px; padding-bottom:25px;>
+  <div class="mutant" style="background-color:#ff0000; padding-top:25px; padding-bottom:25px;">
     <div class="container">
       <!-- Solutions -->
       <div class="row">
