--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   
-  <div class="mutant" style="background-color:#ff0000; padding-top:50px; padding-bottom:50px;">
+  <div class="mutant" style="background-image:url('https://www.telematika.org/images/post/blockchain-talks-eueungmulyana_hu061cfe6059b06dd53f3f0681cc3724e3_54493_900x500_fit_q75_box.jpg')">
     <div class="container">
       <!-- Solutions -->
       <div class="row">
