--- a/_includes/sections/get-started.html
+++ b/_includes/sections/get-started.html
@@ -26,10 +26,10 @@
     <!-- Actions -->
     <div class="row">
       <div class="products-header-actions hidden-xs">
-        <a href="{{ page.gs-action-link }}" class="button">{{ page.header-action-text }}</a>
+        <a href="{{ page.gs-action-link }}" class="button">{{ page.gs-action-text }}</a>
       </div>
       <div class="products-header-actions hidden-sm hidden-md hidden-lg">
-        <a href="{{ page.gs-action-link }}" class="button button--outline">{{ page.header-action-text }}</a>
+        <a href="{{ page.gs-action-link }}" class="button button--outline">{{ page.gs-action-text }}</a>
       </div>
     </div>
     
