--- a/_includes/sections/get-started.html
+++ b/_includes/sections/get-started.html
@@ -1,5 +1,5 @@
 <!-- Get Started Section -->
-<section class="site-section section-focus">
+<section class="products-header-section">
   <div class="container">
     <h2 class="site-section__title">{{ page.gs-title }}</h2>
 
