--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -30,6 +30,7 @@
     
     <!-- Products Header Actions site.links.download -->
     <div class="row">
+      Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
       <div class="products-header-actions hidden-xs">
         <a href="{{ page.header-action-link }}" class="button">{{ page.header-action-text }}</a>
       </div>
