--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -30,12 +30,13 @@
     
     <!-- Products Header Actions site.links.download -->
     <div class="row">
-      Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
       <div class="products-header-actions hidden-xs">
         <a href="{{ page.header-action-link }}" class="button">{{ page.header-action-text }}</a>
+        Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
       </div>
       <div class="products-header-actions hidden-sm hidden-md hidden-lg">
         <a href="{{ page.header-action-link }}" class="button button--outline">{{ page.header-action-text }}</a>
+        Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
       </div>
     </div>
     
