--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -32,11 +32,12 @@
     <div class="row">
       <div class="products-header-actions hidden-xs">
         <a href="{{ page.header-action-link }}" class="button">{{ page.header-action-text }}</a>
-        Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
+        <p>Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.</p>
+        <div class="action-description">Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.</div>    
       </div>
       <div class="products-header-actions hidden-sm hidden-md hidden-lg">
         <a href="{{ page.header-action-link }}" class="button button--outline">{{ page.header-action-text }}</a>
-        Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
+        <div class="action-description">Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.</div>
       </div>
     </div>
     
