--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -36,7 +36,9 @@
       <div class="products-header-actions hidden-sm hidden-md hidden-lg">
         <a href="{{ page.header-action-link }}" class="button button--outline">{{ page.header-action-text }}</a>
       </div>
-      <p style="text-align:center;">Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.</p>
+      <div style="text-align:center; width: 50%; font-size:small;">
+        Important Note: Diode Drive is current in public beta - anyone can download and use it and should expect to see frequent new features and changes in the application through-out the beta.
+      </div>
     </div>
     
   </div>
