--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -33,6 +33,11 @@ function DoTheRedirect(url) { window.location=url; }
                         <a class="button hide JSButton" id="download_button">Download the Beta</a>
                         <noscript>Select your download:</noscript>
                     </div>
+                    <div class="download-action">
+                      <div class="action-description hidden-xs">
+                        NOTE: Diode Drive is currently in public beta - anyone can download and use it, but should expect to see new features and changes to the application on a frequent basis.
+                      </div>
+                    </div>
                 </div>
                 <div class="col-sm-6 col-md-8 hidden-xs">
                     <div class="download-content">
