--- a/_includes/sections/get-started.html
+++ b/_includes/sections/get-started.html
@@ -15,7 +15,7 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 hidden-sm hidden-xs">
+      <div class="col-sm-12 col-md-6 hidden-sm hidden-xs" style="font-size:small;">
         <!-- Products Header Image Description -->
         <div class="products-image-description">
           {{ page.gs-description }}
