--- a/_includes/sections/get-started.html
+++ b/_includes/sections/get-started.html
@@ -15,9 +15,9 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 hidden-sm hidden-xs" style="font-size:small;">
+      <div class="col-sm-12 col-md-6 hidden-sm hidden-xs">
         <!-- Products Header Image Description -->
-        <div class="products-image-description">
+        <div class="products-image-description" style="font-size:small;">
           {{ page.gs-description }}
         </div>
       </div>
