--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -86,8 +86,13 @@ function DoTheRedirect(url) { window.location=url; }
                         <ul class="downloads">
                             {% for download in site.d-drive.downloads %}
                             <li>
+                               {% if download.sha %}
                                 <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
                                 <span class="sha">{{ download.sha }}</span>
+                               {% else %}
+                                <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ download.link }}">{{ download.name }}</a><br/>
+                                <span class="sha">{{ download.sha }}</span>                               
+                               {% endif %}
                             </li>
                             {% endfor %}
                         </ul>
