--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -90,7 +90,7 @@ function DoTheRedirect(url) { window.location=url; }
                                 <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
                                 <span class="sha">{{ download.sha }}</span>
                                {% else %}
-                                <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.mobilesurveylink }}">{{ download.name }}</a><br/>                          
+                                <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.links.mobilesurvey }}">{{ download.name }}</a><br/>                          
                                {% endif %}
                             </li>
                             {% endfor %}
