--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -78,7 +78,11 @@ function DoTheRedirect(url) { window.location=url; }
                     </p>
 
                     {% for download in site.d-drive.downloads %}
-                    <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
+                       {% if download.sha %}
+                       <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
+                       {% else %}
+                       <a class="button hide {{ download.id }}" href="{{ site.links.mobilesurvey }}">Download Diode Drive for {{ download.name }}</a>
+                       {% endif %}
                     {% endfor %}
                     
                     <div class="action-description">
@@ -90,7 +94,7 @@ function DoTheRedirect(url) { window.location=url; }
                                 <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
                                 <span class="sha">{{ download.sha }}</span>
                                {% else %}
-                                <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.links.mobilesurvey }}">{{ download.name }}</a><br/>                          
+                                <a href="{{ site.links.mobilesurvey }}">{{ download.name }}</a><br/>                          
                                {% endif %}
                             </li>
                             {% endfor %}
