--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -78,7 +78,7 @@ function DoTheRedirect(url) { window.location=url; }
                     </p>
 
                     {% for download in site.d-drive.downloads %}
-                       {% if download.sha %}
+                       {% if download.link %}
                        <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download Diode Drive for {{ download.name }}</a>
                        {% else %}
                        <a class="button hide {{ download.id }}" href="{{ site.links.mobilesurvey }}">Download Diode Drive for {{ download.name }}</a>
@@ -90,7 +90,7 @@ function DoTheRedirect(url) { window.location=url; }
                         <ul class="downloads">
                             {% for download in site.d-drive.downloads %}
                             <li>
-                               {% if download.sha %}
+                               {% if download.link %}
                                 <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
                                 <span class="sha">{{ download.sha }}</span>
                                {% else %}
