--- a/_includes/sections/joinzone.html
+++ b/_includes/sections/joinzone.html
@@ -1,9 +1,9 @@
 <!-- Joincode Section -->
 
-<section style="transform: scale(0.90, 0.90); zoom: 0.90; zoom: 90%;" class="site-section section-focus products-pricing-section" id="products-pricing">
-    <div class="container text-center" style="width:560px; transform:translateY(-70px)">
+<section style="transform: scale(0.90, 0.90); zoom: 0.90; zoom: 90%;" id="joinzone">
+    <div class="container text-center" style="width:1200px; transform:translateY(-70px)">
         <h2 class="site-section__title">Join Code</h2>
-        <p>Just click the "Join" button on the Zones page of Diode Drive and enter the Join Code below!</p>
+        <p>Just click the "Join" button on the Zones page of Diode Drive and enter this Join Code!</p>
         <br>
         <h3>
             <script>
@@ -13,7 +13,7 @@
         </h3>
         <br>
         <br>
-        <img style="display:block; margin-left:auto; margin-right: auto; width: 90%;" src="resources/join-zone-gif.gif" alt="how to join zone with join code">
+        <img style="display:block; margin-left:auto; margin-right: auto; width: 520px;" src="resources/join-zone-gif.gif" alt="how to join zone with join code">
         <br>
         <br>
         <p>Don't have Diode Drive yet?</p>
