download link fix attempt #1

--- a/_includes/sections/joinzone.html
+++ b/_includes/sections/joinzone.html
@@ -18,9 +18,7 @@
         <br>
         <p>Don't have Diode Drive yet?</p>
         <div>
-            <a class="button" href="/resources/download/">
-                Free Download
-            </a>
+            <a class="button nav-button" href="resources/download/">Free Download</a>
         </div>
     </div>
 </section>
